--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,10 +13,19 @@
       margin: 0;
     }
   </style>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+  <script
+    src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+    crossorigin></script>
+  
+  <script
+    src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin></script>
+  
+  <script>var Alert = ReactBootstrap.Alert;</script>
   <title>React App</title>
-</head>
+</head> 
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
